# dman

./: .gitignore  CMakeLists.txt  README.md
src/: config.cpp  config.hpp  digest.cpp  digest.hpp  dman.cpp  dman.hpp  util.cpp
src/lib/: CMakeLists.txt
src/lib/include/dman/: config.hpp  digest.hpp  display.hpp  exception.hpp
src/lib/src/: config.cpp  digest.cpp  display-wlroots.cpp  display.cpp  evdev.cpp  evdev.hpp  x11.cpp  x11.hpp
src/lib/test/evdev/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  help.txt
src/util/include/dman/: help.hpp
src/util/src/: util.cpp
